--- a/src/index.css
+++ b/src/index.css
@@ -27,24 +27,17 @@ code {
     monospace;
 }
 
-/* styles.css */
 
-/* Global styles */
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
 
-/* Header styles */
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-}
 
-/* Sidebar styles */
+
+
+
 aside {
   width: 200px;
   background-color: #f0f0f0;
@@ -57,7 +50,7 @@ aside {
   margin-top: 20px;
 }
 
-/* Main content styles */
+
 .main-content {
   display: flex;
 }
@@ -67,14 +60,14 @@ aside {
   padding: 20px;
 }
 
-/* Map styles */
+
 .map-container {
-  height: 500px; /* Adjust the height as needed */
+  height: 500px; 
   background-color: #ddd;
   border-radius: 5px;
 }
 
-/* Controls styles */
+
 .controls {
   display: flex;
   justify-content: space-between;
@@ -82,7 +75,7 @@ aside {
   margin-bottom: 10px;
 }
 
-/* Region info card styles */
+
 .region-info-card {
   background-color: #fff;
   border: 1px solid #ccc;
@@ -93,7 +86,7 @@ aside {
 
 /* Footer styles */
 footer {
-  background-color: #333;
+  background-color: #a19090;
   color: #fff;
   padding: 10px;
   text-align: center;
@@ -101,10 +94,10 @@ footer {
 
 #map-container {
   width: 100%;
-  height: 500px; /* You can adjust the height as needed */
+  height: 500px; 
 }
 
-/* Optionally, you can add some box-shadow or border to give the map container a visual effect */
+
 #map-container {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border: 1px solid #ccc;
